--- a/MP_Policy/component.yaml
+++ b/MP_Policy/component.yaml
@@ -70,6 +70,7 @@ satisfies:
   narrative:
     - text: |
         This control is not applicable to the Cloud.Gov Platform. There are no physical media devices used and Cloud.Gov information system components are virtualized. All network hardware and server components are the responsibility of the underlying Infrastructure as a service provider.
+  standard_key: NIST-800-53
 - control_key: MP-6
   covered_by: []
   implementation_status: complete
