--- a/PE_Policy/component.yaml
+++ b/PE_Policy/component.yaml
@@ -5,8 +5,207 @@ satisfies:
   covered_by: []
   implementation_status: none
   narrative:
+    - key: a 
+      text: |
+        Agency Physical and Environmental Policy
+        Physical and Environmental Policy is included in CIO P 2100.1 - GSA IT Security Policy, Chapter 4. Policy on Operational Controls.  
+        It states, "Physical and environmental security controls must be commensurate with the level of risk and must be sufficient to safeguard IT resources against possible loss, theft, destruction, accidental damage, hazardous conditions, fire, malicious actions, and natural disasters."
+        GSA OCISO ISP also defined agency-wide access control procedures in IT Security Procedural Guide: Access Control (CIO-IT Security-01-07)
+        All physical and Environmental Security Controls for the Cloud.Gov information system are managed and inherited by the AWS Infrastructure as a Service layer.
+    - key: b
+      text: |
+        All physical and Environmental Security Controls for the Cloud.Gov information system are managed and inherited by the AWS Infrastructure as a Service layer.
+  standard_key: NIST-800-53
+- control_key: PE-2
+  covered_by: []
+  implementation_status: none
+  narrative:
+    - key: a
+      text: |
+        All physical and Environmental Security Controls for the Cloud.Gov information system are managed and inherited by the AWS Infrastructure as a Service layer. 
+    - key: b
+      text: |
+        All physical and Environmental Security Controls for the Cloud.Gov information system are managed and inherited by the AWS Infrastructure as a Service layer. 
+    - key: c
+      text: |    
+        All physical and Environmental Security Controls for the Cloud.Gov information system are managed and inherited by the AWS Infrastructure as a Service layer. 
+    - key: d
+      text: |    
+        All physical and Environmental Security Controls for the Cloud.Gov information system are managed and inherited by the AWS Infrastructure as a Service layer. 
+  standard_key: NIST-800-53
+- control_key: PE-3
+  covered_by: []
+  implementation_status: none
+  narrative:
+    - key: a
+      text: |
+        All physical and Environmental Security Controls for the Cloud.Gov information system are managed and inherited by the AWS Infrastructure as a Service layer.
+    - key: b
+      text: |
+        All physical and Environmental Security Controls for the Cloud.Gov information system are managed and inherited by the AWS Infrastructure as a Service layer. 
+    - key: c
+      text: |
+        All physical and Environmental Security Controls for the Cloud.Gov information system are managed and inherited by the AWS Infrastructure as a Service layer. 
+    - key: d
+      text: |
+        All physical and Environmental Security Controls for the Cloud.Gov information system are managed and inherited by the AWS Infrastructure as a Service layer. 
+    - key: e
+      text: |
+        All physical and Environmental Security Controls for the Cloud.Gov information system are managed and inherited by the AWS Infrastructure as a Service layer. 
+    - key: f
+      text: |
+        All physical and Environmental Security Controls for the Cloud.Gov information system are managed and inherited by the AWS Infrastructure as a Service layer. 
+    - key: g
+      text: |
+        All physical and Environmental Security Controls for the Cloud.Gov information system are managed and inherited by the AWS Infrastructure as a Service layer.
+  standard_key: NIST-800-53
+- control_key: PE-4
+  covered_by: []
+  implementation_status: none
+  narrative:
     - text: |
-        18F Policy
+        All physical and Environmental Security Controls for the Cloud.Gov information system are managed and inherited by the AWS Infrastructure as a Service layer.
+  standard_key: NIST-800-53
+- control_key: PE-5
+  covered_by: []
+  implementation_status: none
+  narrative:
+    - text: |
+        All physical and Environmental Security Controls for the Cloud.Gov information system are managed and inherited by the AWS Infrastructure as a Service layer.
+  standard_key: NIST-800-53
+- control_key: PE-6
+  covered_by: []
+  implementation_status: none
+  narrative:
+    - key: a
+      text: |
+        All physical and Environmental Security Controls for the Cloud.Gov information system are managed and inherited by the AWS Infrastructure as a Service layer.
+    - key: b
+      text: |
+        All physical and Environmental Security Controls for the Cloud.Gov information system are managed and inherited by the AWS Infrastructure as a Service layer.
+    - key: c
+      text: |
+        All physical and Environmental Security Controls for the Cloud.Gov information system are managed and inherited by the AWS Infrastructure as a Service layer.
+  standard_key: NIST-800-53
+- control_key: PE-6 (1)
+  covered_by: []
+  implementation_status: none
+  narrative:
+    - text: |
+         All physical and Environmental Security Controls for the Cloud.Gov information system are managed and inherited by the AWS Infrastructure as a Service layer.
+  standard_key: NIST-800-53
+- control_key: PE-8
+  covered_by: []
+  implementation_status: none
+  narrative:
+    - key: a
+      text: |
+         All physical and Environmental Security Controls for the Cloud.Gov information system are managed and inherited by the AWS Infrastructure as a Service layer.
+    - key: b
+      text: |
+         All physical and Environmental Security Controls for the Cloud.Gov information system are managed and inherited by the AWS Infrastructure as a Service layer.  
+  standard_key: NIST-800-53
+- control_key: PE-9
+  covered_by: []
+  implementation_status: none
+  narrative:
+    - text: |
+        All physical and Environmental Security Controls for the Cloud.Gov information system are managed and inherited by the AWS Infrastructure as a Service layer.
+  standard_key: NIST-800-53
+- control_key: PE-10
+  covered_by: []
+  implementation_status: none
+  narrative:
+    - key: a
+      text: |
+        All physical and Environmental Security Controls for the Cloud.Gov information system are managed and inherited by the AWS Infrastructure as a Service layer.
+    - key: b
+      text: |
+        All physical and Environmental Security Controls for the Cloud.Gov information system are managed and inherited by the AWS Infrastructure as a Service layer.
+    - key: c
+      text: |  
+        All physical and Environmental Security Controls for the Cloud.Gov information system are managed and inherited by the AWS Infrastructure as a Service layer.  
+  standard_key: NIST-800-53
+- control_key: PE-11
+  covered_by: []
+  implementation_status: none
+  narrative:
+    - text: |
+        All physical and Environmental Security Controls for the Cloud.Gov information system are managed and inherited by the AWS Infrastructure as a Service layer.
+  standard_key: NIST-800-53
+- control_key: PE-12
+  covered_by: []
+  implementation_status: none
+  narrative:
+    - text: |
+        All physical and Environmental Security Controls for the Cloud.Gov information system are managed and inherited by the AWS Infrastructure as a Service layer.
+  standard_key: NIST-800-53
+- control_key: PE-13
+  covered_by: []
+  implementation_status: none
+  narrative:
+    - text: |
+        All physical and Environmental Security Controls for the Cloud.Gov information system are managed and inherited by the AWS Infrastructure as a Service layer.
+  standard_key: NIST-800-53
+- control_key: PE-13 (2)
+  covered_by: []
+  implementation_status: none
+  narrative:
+    - text: |
+        All physical and Environmental Security Controls for the Cloud.Gov information system are managed and inherited by the AWS Infrastructure as a Service layer.
+  standard_key: NIST-800-53
+- control_key: PE-13 (3)
+  covered_by: []
+  implementation_status: none
+  narrative:
+    - text: |
+        All physical and Environmental Security Controls for the Cloud.Gov information system are managed and inherited by the AWS Infrastructure as a Service layer.
+  standard_key: NIST-800-53
+- control_key: PE-14
+  covered_by: []
+  implementation_status: none
+  narrative:
+    - key: a
+      text: |
+        All physical and Environmental Security Controls for the Cloud.Gov information system are managed and inherited by the AWS Infrastructure as a Service layer.
+    - key: b
+      text: |
+        All physical and Environmental Security Controls for the Cloud.Gov information system are managed and inherited by the AWS Infrastructure as a Service layer.  
+  standard_key: NIST-800-53
+- control_key: PE-14 (2)
+  covered_by: []
+  implementation_status: none
+  narrative:
+    - text: |
+        All physical and Environmental Security Controls for the Cloud.Gov information system are managed and inherited by the AWS Infrastructure as a Service layer.
+  standard_key: NIST-800-53
+- control_key: PE-15
+  covered_by: []
+  implementation_status: none
+  narrative:
+    - text: |
+        All physical and Environmental Security Controls for the Cloud.Gov information system are managed and inherited by the AWS Infrastructure as a Service layer.
+  standard_key: NIST-800-53
+- control_key: PE-16
+  covered_by: []
+  implementation_status: none
+  narrative:
+    - text: |
+        All physical and Environmental Security Controls for the Cloud.Gov information system are managed and inherited by the AWS Infrastructure as a Service layer.
+  standard_key: NIST-800-53
+- control_key: PE-17
+  covered_by: []
+  implementation_status: none
+  narrative:
+    - key: a
+      text: |
+        All physical and Environmental Security Controls for the Cloud.Gov information system are managed and inherited by the AWS Infrastructure as a Service layer.
+    - key: b
+      text: |
+        All physical and Environmental Security Controls for the Cloud.Gov information system are managed and inherited by the AWS Infrastructure as a Service layer.
+    - key: c
+      text: |
+        All physical and Environmental Security Controls for the Cloud.Gov information system are managed and inherited by the AWS Infrastructure as a Service layer.
   standard_key: NIST-800-53
 schema_version: 3.0.0
 system: 18F
