--- a/MA_Policy/component.yaml
+++ b/MA_Policy/component.yaml
@@ -50,21 +50,21 @@ satisfies:
   covered_by: []
   implementation_status: complete
   narrative:
-      text: |
+    - text: |
         This control is inherited from the AWS GovCloud FedRAMP implementation.
   standard_key: NIST-800-53
 - control_key: MA-3 (1)
   covered_by: []
   implementation_status: complete
   narrative:
-      text: |
+    - text: |
         This control is inherited from the AWS GovCloud FedRAMP implementation.
   standard_key: NIST-800-53
 - control_key: MA-3 (2)
   covered_by: []
   implementation_status: complete
   narrative:
-      text: |
+    - text: |
         This control is inherited from the AWS GovCloud FedRAMP implementation.
   standard_key: NIST-800-53
 - control_key: MA-3 (3)
@@ -108,7 +108,7 @@ satisfies:
   covered_by: []
   implementation_status: complete
   narrative:
-      text: |
+    - text: |
         This control is inherited from the AWS GovCloud FedRAMP implementation.
   standard_key: NIST-800-53
 - control_key: MA-5
