--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,1 @@
-exports/
-*.env
-*.swp
-*__pycache__/
-*.pyc
-tests/security-group-test-app/Godeps/_workspace/
-*.python-version
-.cache/
-schemas/
-opencontrols
+inputs.yml
