Add Jeff to IAM audit checks
This changeset adds Jeff to our IAM audits.

--- a/audit/inputs.yml
+++ b/audit/inputs.yml
@@ -6,6 +6,7 @@ admins:
   - ben.berry
   - carlo.costino
   - chris.mcgowan
+  - jeff.fredrickson
   - mark.headd
   - rebecca.goodman
   - steve.greenberg
