--- a/audit/inputs.yml
+++ b/audit/inputs.yml
@@ -7,6 +7,7 @@ admins:
   - carlo.costino
   - chris.mcgowan
   - jeff.fredrickson
+  - john.mullen
   - mark.headd
   - rebecca.goodman
   - steve.greenberg
