Add Kwadwo to IAM audit file
This changset adds @kwadwok15's account to our IAM audit file.

--- a/audit/inputs.yml
+++ b/audit/inputs.yml
@@ -8,6 +8,7 @@ admins:
   - chris.mcgowan
   - jeff.fredrickson
   - john.mullen
+  - kwadwo.korang
   - mark.headd
   - rebecca.goodman
   - steve.greenberg
