--- a/audit/custodian/s3-cross-account.yml
+++ b/audit/custodian/s3-cross-account.yml
@@ -1,17 +1,19 @@
+
 policies:
-  - name: s3-cross-account
-    description: |
-      Checks S3 for buckets with cross-account access enabled
-    resource: aws.s3
-    region: us-gov-west-1
-    filters:
-      - type: cross-account 
-      
-# - name: CheckForPublicAclBlock-Off
-#    resource: aws.s3
-#    region: us-gov-west-1
-##    filters:
-#      - type: check-public-block
-#        BlockPublicAcls: true
-#        BlockPublicPolicy: true
-#
+- name: s3-cross-account
+  description: |
+    Checks S3 for buckets with cross-account access and
+    removes the cross-account access.
+  resource: s3
+  region: us-gov-west-1
+  filters:
+    - type: cross-account
+- name: not-s3-cross-account
+  description: |
+    Checks S3 for buckets with cross-account access and
+    removes the cross-account access.
+  resource: s3
+  region: us-gov-west-1
+  filters:
+    - not:
+      - type: cross-account
