--- a/audit/custodian/cloudfront.yml
+++ b/audit/custodian/cloudfront.yml
@@ -11,3 +11,13 @@ policies:
       - type: distribution-config
         key: Logging.Enabled
         value: False
+  - name: waf-enabled
+    resource: aws.distribution
+    filters:
+      - not:
+        - type: waf-enabled
+  - name: shield-enabled
+    resource: aws.distribution
+    filters:
+      - type: shield-enabled
+
