--- a/audit/inputs.yml
+++ b/audit/inputs.yml
@@ -1,12 +1,13 @@
 non-admins:
   - peter.burkholder
-  - lindsay.young
+  - chiaka.opara
 admins:
   - andrew.burnes
   - ben.berry
-  - carlo.costino
   - chris.mcgowan
   - david.anderson
   - mark.headd
   - rian.bogle
   - van.nguyen
+  - robert.gottlieb
+  - mark.boyd
