--- a/audit/inputs.yml
+++ b/audit/inputs.yml
@@ -1,13 +1,15 @@
 non-admins:
   - peter.burkholder
   - chiaka.opara
+  - arsalan.haider
 admins:
   - andrew.burnes
-  - ben.berry
   - chris.mcgowan
+  - chris.weibel
   - david.anderson
-  - mark.headd
-  - rian.bogle
-  - van.nguyen
-  - robert.gottlieb
+  - dorothy.tamasang
+  - james.hochadel
+  - jason.gambino
   - mark.boyd
+  - robert.gottlieb
+  - van.nguyen
